# otio-diff

./: HANDOFF.md  README.md  mcp_server.py  otio_diff.py  pyproject.toml  requirements.txt  test_otio_diff.py  tool.json
.github/workflows/: ci.yml
validation/: README.md  cut_b1_trim.edl  cut_b2_removed.edl  fcpx_b_trim.fcpxml
