[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "otio-diff"
version = "0.1.0"
description = "Structural editorial diff between two timelines (OpenTimelineIO)."
readme = "README.md"
# <3.14: OTIO 0.18.1's adapter subsystem raises "bad any cast" loading its
# plugin manifest on Python 3.14 (core schema works; file I/O doesn't).
# Verified 2026-07-02; lift the cap when an OTIO release fixes it.
requires-python = ">=3.9,<3.14"
license = { text = "Apache-2.0" }  # match OTIO's license for easy upstream contribution
authors = [{ name = "Daniel Strader (chaoz23)", email = "chaoz23@gmail.com" }]
keywords = ["opentimelineio", "otio", "editorial", "diff", "video", "post-production", "mcp"]

# Exact versions tested — mirror requirements.txt (OTIO 0.18.1, mcp 1.28.1).
dependencies = [
    "opentimelineio==0.18.1",
]

[project.optional-dependencies]
# The MCP wrapper is optional — the CLI works standalone without it.
mcp = ["mcp==1.28.1"]
dev = ["pytest>=7"]

[project.scripts]
# Exposes the `otio-diff` command -> otio_diff.main()
otio-diff = "otio_diff:main"

[project.urls]
Homepage = "https://github.com/chaoz23/otio-diff"
Issues = "https://github.com/chaoz23/otio-diff/issues"

[tool.setuptools]
# Single-module layout: otio_diff.py + mcp_server.py at repo root.
py-modules = ["otio_diff", "mcp_server"]

[tool.pytest.ini_options]
addopts = "-v"
